Added support for optional fields